--- a/themes/timer-hugo/layouts/sewamotorjogja/list.html
+++ b/themes/timer-hugo/layouts/sewamotorjogja/list.html
@@ -28,7 +28,7 @@
 <section class="about-feature clearfix">
 	<div class="container-fluid">
 		<div class="row">
-			{{ range $index, $element := .Site.Data.sewamotorjogja.sewamotorjogjaItem }}
+			{{ range $index, $element := .Site.Data.sewamotorjogja.aboutItem }}
 			<div class="col-lg-4 px-0">
 				{{ $class := add $index 1 }}
 				<div class="block about-feature-{{ $class }} wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">
