--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lobster:400,300,100,500,700);
+@import url(https://fonts.googleapis.com/css?family=Pacifico+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Glegoo);
 
 body {
