--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -1,9 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Lobster:400,300,100,500,700);
-@import url(https://fonts.googleapis.com/css?family=Pacifico+Condensed:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Cabin:400,300,100,500,700);
+@import url(https://fonts.googleapis.com/css?family=Asap+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Glegoo);
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Cabin", sans-serif;
 }
 
 h1,
@@ -12,7 +12,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Asap", sans-serif;
 }
 
 h2 {
@@ -20,7 +20,7 @@ h2 {
 }
 
 p {
-  font-family: "Roboto", sans-serif;
+  font-family: "Cabin", sans-serif;
   line-height: 22px;
   font-size: 16px;
   font-weight: 300;
