--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -63,7 +63,7 @@ a:hover {
   line-height: 1.1;
   font-weight: 300;
   color: #333;
-  text-transform: uppercase;
+  text-transform: lettercase;
   margin-bottom: 20px;
 }
 
