--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:400,300,100,500,700);
-@import url(https://fonts.googleapis.com/css?family=Asap+Condensed:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Glegoo);
+@import url(https://fonts.googleapis.com/css?family=Asap:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Cabin Sketch);
 
 body {
   font-family: "Cabin", sans-serif;
