--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -71,7 +71,7 @@ a:hover {
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 18px;
-  text-transform: uppercase;
+  text-transform: lettercase;
 }
 
 .subtitle-des {
@@ -146,7 +146,7 @@ a:hover {
   font-size: 42px;
   font-weight: bold;
   color: #fff;
-  text-transform: uppercase;
+  text-transform: lettercase;
 }
 
 .global-page-header .breadcrumb {
