--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -318,7 +318,7 @@ a:hover {
   color: #333;
   font-weight: 700;
   margin-bottom: 15px;
-  text-transform: uppercase;
+  text-transform: lettercase;
 }
 
 #hero-area h2 {
@@ -326,7 +326,7 @@ a:hover {
   font-weight: 300;
   margin-bottom: 38px;
   line-height: 27px;
-  text-transform: uppercase;
+  text-transform: lettercase;
   color: #333;
   font-family: 'Roboto', sans-serif;
   margin-top: 25px;
@@ -341,7 +341,7 @@ a:hover {
   font-size: 16px;
   font-size: 13px;
   line-height: 1em;
-  text-transform: uppercase;
+  text-transform: lettercase;
   letter-spacing: normal;
   border-radius: 0;
 }
