--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:400,300,100,500,700);
-@import url(https://fonts.googleapis.com/css?family=Asap:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Asap+Pasifico:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Cabin Sketch);
 
 body {
@@ -382,7 +382,7 @@ a:hover {
   margin-top: 20px;
   font-size: 12px;
   letter-spacing: 2px;
-  text-transform: uppercase;
+  text-transform: lettercase;
   border-radius: 0;
   transition: all linear .2s;
 }
@@ -408,7 +408,7 @@ a:hover {
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 30px;
-  text-transform: uppercase;
+  text-transform: lettercase;
 }
 
 #about .block p {
@@ -607,7 +607,7 @@ figure figcaption p {
 #feature h3 {
   color: #222222;
   font-size: 18px;
-  text-transform: uppercase;
+  text-transform: lettercase;
   text-align: center;
   margin-bottom: 20px;
   margin: 0px 0px 15px;
@@ -658,7 +658,7 @@ figure figcaption p {
   font-size: 16px;
   font-size: 13px;
   line-height: 1em;
-  text-transform: uppercase;
+  text-transform: lettercase;
   letter-spacing: normal;
   border-radius: 0;
   transition: all linear .2s;
@@ -1240,13 +1240,13 @@ article {
 }
 
 .team-member .team_designation {
-  font-size: 13px;
+  font-size: 23px;
 }
 
 .team-member h3 {
   color: #02bdd5;
   margin-bottom: 0;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .team-member p {
