--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -328,7 +328,7 @@ a:hover {
   line-height: 27px;
   text-transform: lettercase;
   color: #333;
-  font-family: 'Cabin', sans-serif;
+  font-family: 'Pasifico', Cabin Sketch;
   margin-top: 25px;
 }
 
