--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -3,7 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin Sketch);
 
 body {
-  font-family: "Cabin", Cabin Sketch;
+  font-family: "Lobster", Cabin Sketch;
 }
 
 h1,
