--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:400,300,100,500,700);
-@import url(https://fonts.googleapis.com/css?family=Asap+Pacifico:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Asap+Lobster:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Cabin Sketch);
 
 body {
@@ -220,9 +220,9 @@ a:hover {
 
 .navbar .nav-item .nav-link {
   color: #444 !important;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
-  transition: .5s all;
+  transition: .6s all;
   text-transform: lettercase;
   padding: 5px 10px;
   display: block;
@@ -237,7 +237,7 @@ a:hover {
 }
 
 .dropdown-menu {
-  background: #222222;
+  background: #ffffff;
   border: 0;
   border-radius: 0;
   padding: 15px;
