--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -3,7 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin Sketch);
 
 body {
-  font-family: "Lobster", Cabin Sketch;
+  font-family: "Asap", Cabin Sketch;
 }
 
 h1,
@@ -52,7 +52,7 @@ a:hover {
 }
 
 .section-heading p {
-  font-size: 14px;
+  font-size: 24px;
   font-weight: 300;
   color: #727272;
   line-height: 20px;
