--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -8,8 +8,8 @@
             <script>
               document.write(new Date().getFullYear())
             </script>
-          </span> Design and Developed by
-          <a href="http://www.Themefisher.com" target="_blank">BAT</a>.
+          </span> by
+          <a href="http://www.beningabaditransport.com" target="_blank">BAT</a>.
         </p>
       </div>
       <div class="col-md-4 col-12">
