--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row content-justify-between">
       <div class="col-md-8 col-12 text-center text-lg-left text-md-left">
-        <p class="copyright">Copyright:
+        <p class="copyright">
           <span>
             <script>
               document.write(new Date().getFullYear())
