--- a/themes/timer-hugo/layouts/partials/portfolio.html
+++ b/themes/timer-hugo/layouts/partials/portfolio.html
@@ -1,5 +1,5 @@
 {{ if .Site.Params.portfolio.enable }}
 {{ "<!-- Portfolio Section Start -->" | safeHTML }}
-<iframe width="100%" height="900" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="2"></iframe>
+<iframe width="100%" height="900" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="2" allowfullscreen></iframe>
 {{ "<!-- Portfolio Section End -->" | safeHTML }}
 {{ end }}
