--- a/themes/timer-hugo/layouts/partials/portfolio.html
+++ b/themes/timer-hugo/layouts/partials/portfolio.html
@@ -1,6 +1,6 @@
 {{ if .Site.Params.portfolio.enable }}
 {{ "<!-- Portfolio Section Start -->" | safeHTML }}
 <meta http-equiv=refresh content="60">
-<iframe width="100%" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="2" allowfullscreen></iframe>
+<iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen></iframe>
 {{ "<!-- Portfolio Section End -->" | safeHTML }}
 {{ end }}
