--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -1400,10 +1400,10 @@ ul.social-icons li {
 	position:fixed;
 	width:160px;
 	height:40px;
-	bottom:100px;
+	bottom:80px;
 	right:20px;
 	background-color:#25d366;
-	color:#000;
+	color:#fff;
 	border-radius:40px;
 	text-align:center;
         font-size:18px;
