--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -1367,7 +1367,7 @@ ul.social-icons li {
 	bottom:20px;
 	right:20px;
 	background-color:#25d366;
-	color:#FFF;
+	color:#fff;
 	border-radius:40px;
 	text-align:center;
   font-size:18px;
@@ -1385,7 +1385,7 @@ ul.social-icons li {
 	bottom:60px;
 	right:20px;
 	background-color:#25d366;
-	color:#FFF;
+	color:#fff;
 	border-radius:40px;
 	text-align:center;
   font-size:18px;
@@ -1400,7 +1400,7 @@ ul.social-icons li {
 	position:fixed;
 	width:160px;
 	height:40px;
-	bottom:120px;
+	bottom:100px;
 	right:20px;
 	background-color:#25d366;
 	color:#fff;
