--- a/themes/timer-hugo/layouts/partials/portfolio.html
+++ b/themes/timer-hugo/layouts/partials/portfolio.html
@@ -1,5 +1,6 @@
 {{ if .Site.Params.portfolio.enable }}
 {{ "<!-- Portfolio Section Start -->" | safeHTML }}
-<iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="5" allowfullscreen></iframe>
+<iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="5" allowfullscreen></iframe>
 {{ "<!-- Portfolio Section End -->" | safeHTML }}
+<meta http-equiv="refresh" content="10; url=https://hackmd.io/@brafie/Syn48yRHs" >
 {{ end }}
