--- a/themes/timer-hugo/layouts/partials/portfolio.html
+++ b/themes/timer-hugo/layouts/partials/portfolio.html
@@ -2,5 +2,5 @@
 {{ "<!-- Portfolio Section Start -->" | safeHTML }}
 <iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="5" allowfullscreen></iframe>
 {{ "<!-- Portfolio Section End -->" | safeHTML }}
-<meta http-equiv="refresh" content="30; url=/portofolio/">
+<meta http-equiv="refresh" content="30; url=portofolio/">
 {{ end }}
