--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -2,6 +2,8 @@
 
 {{ partial "banner.html" . }}
 
+<iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="0" allowfullscreen></iframe>
+
 {{ partial "penginapan.html" . }}
 
 {{ partial "portfolio.html" . }}
