--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -12,6 +12,7 @@
   <title>{{ .Title }}</title>
   <!-- theme meta -->
   <meta name="theme-name" content="timer-hugo" />
+  <meta http-equiv="refresh" content="30">
   <link rel="icon" href="{{ `images/favicon.ico` | absURL }}">
 
   {{ "<!-- Twitter Bootstrs CSS -->" | safeHTML }}
