--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -1,5 +1,11 @@
 {{ define "main" }}
+<script>
+window.setInterval("reloadIFrame();", 30000);
 
+function reloadIFrame() {
+ document.frames["frameNameHere"].location.reload();
+}
+</script>
 {{ partial "banner.html" . }}
 
 <iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="0" allowfullscreen></iframe>
