--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <script>
-window.setInterval("reloadIFrame();", 60000);
+window.setInterval("reloadIFrame();", 90000);
 
 function reloadIFrame() {
  document.frames["frameNameHere"].location.reload();
@@ -8,7 +8,7 @@ function reloadIFrame() {
 </script>
 {{ partial "banner.html" . }}
 
-<iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="1000" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="0" allowfullscreen="0"></iframe>
 
 {{ partial "penginapan.html" . }}
 
