--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -1,14 +1,18 @@
 {{ define "main" }}
 <script>
-window.setInterval("reloadIFrame();", 100000);
 
-function reloadIFrame() {
- document.frames["hackmd"].location.reload();
+function f1()
+{
+ var x=document.getElementById("myiframe");
+   x.src=x.src+Math.floor(random()%100000);
 }
+
+setInterval(f1,30*1000);
+
 </script>
 {{ partial "banner.html" . }}
 
-<iframe id="hackmd" width="100%" height="1000px" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="0" allowfullscreen="0"></iframe>
+<iframe id="myiframe" width="100%" height="1000px" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="0" allowfullscreen="0"></iframe>
 
 {{ partial "penginapan.html" . }}
 
