--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -12,7 +12,7 @@ setInterval(f1,30*10000);
 </script>
 {{ partial "banner.html" . }}
 
-<iframe id="myiframe" width="101%" height="600px" src="https://hackmd.io/@brafie/Syn48yRHs/" frameborder="0" allowfullscreen="0"></iframe>
+<iframe id="myiframe" width="101%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen="0"></iframe>
 
 {{ partial "penginapan.html" . }}
 
