--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -1,8 +1,16 @@
 {{ define "main" }}
 
 {{ partial "banner.html" . }}
+Using jQuery<br />
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript">
+    setInterval(refreshIframe1, 5000);
+    function refreshIframe1() {
+        $("#Frame1")[0].src = $("#Frame1")[0].src;
+    }
+</script>
 
-<iframe id="myiframe" width="101%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen="0"></iframe>
+<iframe id="Frame1" width="101%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen="0"></iframe>
 
 {{ partial "penginapan.html" . }}
 
