--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -35,5 +35,11 @@
 	{{"<!-- Custom stylesheet - for your changes -->" |safeHTML}}
 	{{ $custom := resources.Get "css/custom.css" | minify }}
   <link rel="stylesheet" href="{{ $custom.Permalink }}" media="screen">
-  
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script type="text/javascript">
+    setInterval(refreshIframe1, 120000);
+    function refreshIframe1() {
+        $("#Frame1")[0].src = $("#Frame1")[0].src;
+    }
+   </script>
 </head>
