--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -4,6 +4,9 @@
 
 <iframe id="Frame1" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen="0"></iframe>
 
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-dcbd26a9-ed18-44be-98cf-d05920611839"></div>
+
 {{ partial "penginapan.html" . }}
 
 {{ partial "portfolio.html" . }}
