--- a/themes/timer-hugo/layouts/partials/header.html
+++ b/themes/timer-hugo/layouts/partials/header.html
@@ -42,13 +42,11 @@
 <div class="rowwa">
 <div class="columnwa">
 <link rel="stylesheet" href="https://ayzeapykfq.cloudimg.io/v7/maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css?func=proxy&process=minify-css">
-<a href="https://api.whatsapp.com/send?phone=62818267443&text=" class="float1" target="_blank">
-<i class="fa fa-whatsapp my-float1">(PUSAT)0818-267-443</i>
+<a href="https://api.whatsapp.com/send?phone=62818267443&text=" class="float1" target="_blank"><i class="fa fa-whatsapp my-float1">0818-267-443</i>
 </a></div>
 <div class="columnwa">
 <link rel="stylesheet" href="https://ayzeapykfq.cloudimg.io/v7/maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css?func=proxy&process=minify-css">
-<a href="https://api.whatsapp.com/send?phone=6281222226783&text=" class="float2" target="_blank">
-<i class="fa fa-whatsapp my-float2">(PUSAT)0812-2222-6783</i>
+<a href="https://api.whatsapp.com/send?phone=6281222226783&text=" class="float2" target="_blank"><i class="fa fa-whatsapp my-float2">0812-2222-6783</i>
 </a></div>
 </div>
 </section>
