--- a/themes/timer-hugo/layouts/partials/banner.html
+++ b/themes/timer-hugo/layouts/partials/banner.html
@@ -1,6 +1,6 @@
 {{ if .Site.Params.banner.enable }}
 {{ "<!-- Slider Section Start -->" | safeHTML }}
-<section id="hero-area" style='background-image: url("{{ .Site.Params.banner.bgImage | absURL }}");'>
+<section id="hero-area">
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
