--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -21,7 +21,8 @@
   <!-- theme meta -->
   <meta name="theme-name" content="timer-hugo" />
   <link rel="icon" href="{{ `images/favicon.ico` | absURL }}">
-
+  <link rel="preload" href="css/style.css" as="style" />
+  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" as="script" />
   {{ "<!-- Twitter Bootstrs CSS -->" | safeHTML }}
   <link rel="stylesheet" href="{{ `plugins/bootstrap/bootstrap.min.css` | absURL }}">
   {{ "<!-- Ionicons Fonts Css -->" | safeHTML }}
