--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -23,6 +23,12 @@
   <link rel="icon" href="{{ `images/favicon.ico` | absURL }}">
   <link rel="preload" href="css/style.css" as="style" />
   <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" as="script" />
+  <link rel="preload" href="{{ `plugins/bootstrap/bootstrap.min.css` | absURL }}" as="style" />
+  <link rel="preload" href="{{ `plugins/facncybox/jquery.fancybox.css` | absURL }}" as="style" />
+  <link rel="preload" href="{{ `plugins/hover/hover-min.css` | absURL }}" as="style" />
+  <link rel="preload" href="{{ `plugins/animate-css/animate.css` | absURL }}" as="style" />
+  <link rel="preload" href="{{ `plugins/slider/slider.css` | absURL }}" as="style" />
+  <link rel="preload" href="{{ `plugins/slick/slick.css` | absURL }}" as="style" />
   {{ "<!-- Twitter Bootstrs CSS -->" | safeHTML }}
   <link rel="stylesheet" href="{{ `plugins/bootstrap/bootstrap.min.css` | absURL }}">
   {{ "<!-- Ionicons Fonts Css -->" | safeHTML }}
