--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -23,7 +23,7 @@
   <link rel="icon" href="{{ `images/favicon.ico` | absURL }}">
   <link rel="preload" href="css/style.css" as="style" />
   <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" as="script" />
-  <link rel="preload" href="https://apps.elfsight.com/p/platform.js" as="script" />
+  <link rel="preload" href="https://grwapi.net/widget.min.js" as="script" />
   <link rel="preload" href="{{ `plugins/bootstrap/bootstrap.min.css` | absURL }}" as="style" />
   <link rel="preload" href="{{ `plugins/facncybox/jquery.fancybox.css` | absURL }}" as="style" />
   <link rel="preload" href="{{ `plugins/hover/hover-min.css` | absURL }}" as="style" />
