--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -4,7 +4,7 @@
 
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen="0"></iframe>
 
-<script src="https://widget.trustmary.com/oY8iWpK2U"></script>
+<script src="https://widget.trustmary.com/evC0miJd7"></script>
 
 {{ partial "penginapan.html" . }}
 
