--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -4,6 +4,8 @@
 
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen="0"></iframe>
 
+<hr>
+Google Review Pelanggan Kami
 <script src="https://widget.trustmary.com/evC0miJd7"></script>
 
 {{ partial "penginapan.html" . }}
