--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -30,6 +30,7 @@
   <link rel="preload" href="{{ `plugins/slider/slider.css` | absURL }}" as="style" />
   <link rel="preload" href="{{ `plugins/slick/slick.css` | absURL }}" as="style" />
   <link rel="preload" href="https://widget.trustmary.com/evC0miJd7" as="script" />
+  <link rel="preload" href="https://assets.hackmd.io/build/pretty.f0eabd4e1a29877a9fcb.js" as="script" />
   {{ "<!-- Twitter Bootstrs CSS -->" | safeHTML }}
   <link rel="stylesheet" href="{{ `plugins/bootstrap/bootstrap.min.css` | absURL }}">
   {{ "<!-- Ionicons Fonts Css -->" | safeHTML }}
