--- a/themes/timer-hugo/layouts/gallery/list.html
+++ b/themes/timer-hugo/layouts/gallery/list.html
@@ -15,7 +15,7 @@
             <img src="{{ .image | absURL }}" class="img-fluid" alt="this is a title">
             <div class="overlay">
               <div class="buttons">
-                <a rel="gallery" class="fancybox" href="{{ .image | absURL }}">Demo</a>
+                <a rel="gallery" class="fancybox" href="{{ .image | absURL }}">BENING GALLERIES</a>
               </div>
             </div>
           </div>
