--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -2,8 +2,7 @@
 
 {{ partial "banner.html" . }}
 
-<iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0" allowfullscreen="0"></iframe>
-
+<iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0"></iframe>
 <hr>
 <h2><u>Google Review Pelanggan Kami</u></h2>
 <script src="https://widget.trustmary.com/evC0miJd7"></script>
