--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -60,4 +60,13 @@
         $("#Frame1")[0].src = $("#Frame1")[0].src;
     }
    </script>
+	<!-- Begin 33Across SiteCTRL -->
+<script>
+var Tynt=Tynt||[];Tynt.push('bEA_4oiiWr6yknaKkv7mNO');
+(function(){var h,s=document.createElement('script');
+s.src='https://cdn.tynt.com/ti.js';
+h=document.getElementsByTagName('script')[0];
+h.parentNode.insertBefore(s,h);})();
+</script>
+<!-- End 33Across SiteCTRL -->
 </head>
