--- a/themes/timer-hugo/layouts/sewamotorjogja/list.html
+++ b/themes/timer-hugo/layouts/sewamotorjogja/list.html
@@ -46,10 +46,6 @@
 
 {{ partial "motorclient.html" . }}
 
-<div class="map">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.0698382850193!2d110.38218887107813!3d-7.777373324495907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a59c915b63759%3A0x464727210bf21197!2sSewa%20Mobil%20Murah%20Jogja%20%2F%20Bening%20Abadi%20Trans!5e0!3m2!1sen!2sid!4v1668745600711!5m2!1sen!2sid"
-              width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
+{{ partial "cta.html" . }}
 
 {{ end }}
