--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -4,7 +4,7 @@
 
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0"></iframe>
 <hr>
-<div class="review-widget_net" data-uuid="756fdb53-598d-499a-8e28-9e75094ce53c" data-template="3" data-filter="" data-lang="en" data-theme="light"><center><a href="https://www.review-widget.net/" target="_blank" rel="noopener"><img src="https://grwapi.net/assets/spinner/spin.svg" title="Google Review Widget" alt="Google Review Widget"></a></center></div><script async type="text/javascript" src="https://grwapi.net/widget.min.js"></script>
+<div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="109539" view-url="https://widget.tagembed.com/109539">  </div> <script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script></div>
 <hr>
 {{ partial "penginapan.html" . }}
 
