--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-
+<div class="powr-multi-slider" id="0e06d4c8_1694435023"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
 {{ partial "banner.html" . }}
 
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0"></iframe>
