--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer">
   <div class="container">
     <div class="row content-justify-between">
-      <div class="col-md-8 col-12 text-center text-lg-left text-md-left">
+      <div class="col-md-8 col-12 text-lg-left text-md-left">
         <p class="copyright">
           <span>
             <script>
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-4 col-12">
         {{ "<!-- Social Media -->" | safeHTML }}
-        <ul class="social text-center text-md-right text-lg-right">
+        <ul class="social text-md-right text-lg-right">
           {{ range .Site.Params.socialIcon }}
           <li><a href="{{ .url | safeURL }}"><i class="{{ .icon }}"></i></a></li>
           {{ end }}
