--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -9,7 +9,7 @@
               document.write(new Date().getFullYear())
             </script>
           </span>  by
-          <a href="http://www.beningabaditransport.com" target="_blank"> BAT</a>.
+          <a href="https://beningabaditransport.com" target="_blank"> BAT</a>.
         </p>
       </div>
       <div class="col-md-4 col-12">
