--- a/themes/timer-hugo/layouts/partials/head.html
+++ b/themes/timer-hugo/layouts/partials/head.html
@@ -76,4 +76,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         $("#Frame1")[0].src = $("#Frame1")[0].src;
     }
    </script>
+  <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 </head>
