--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -2,6 +2,16 @@
 
 {{ partial "banner.html" . }}
 <hr>
+<div class="swiffy-slider slider-item-nogap slider-item-slider-nav-autoplay slider-nav-animation slider-nav-animation-scale slider-nav-animation-slow">
+    <ul class="slider-container">
+        <li><img src="https://beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;"></li>
+        <div id="slide1"></div>
+        </li>
+        <li><img src="https://beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto;"></li>
+        <div id="slide2"></div>
+        </li>     
+    </ul>
+</div>
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0"></iframe>
 <hr>
 <div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="109539" view-url="https://widget.tagembed.com/109539">  </div> <script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script></div>
