--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -2,7 +2,7 @@
 
 {{ partial "banner.html" . }}
 <hr>
-<div class="swiffy-slider slider-item-nogap slider-item slider-nav-autoplay slider-nav-animation slider-nav-animation-scale slider-nav-animation-slow">
+<div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-scale slider-nav-animation-slow">
     <ul class="slider-container">
         <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;"></li>
         <div id="slide1"></div>
