--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -4,10 +4,10 @@
 <hr>
 <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
     <ul class="slider-container">
-        <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;"></li>
+        <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto; text-align: center;"></li>
         <div id="slide1"></div>
         </li>
-        <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto;"></li>
+        <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto;text-align: center;"></li>
         <div id="slide2"></div>
         </li>     
     </ul>
