--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -3,7 +3,7 @@
 {{ partial "banner.html" . }}
 <hr>
 <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
-    <ul class="slider-container">
+    <ul class="slider-container main-nav">
         <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
         <div id="slide1"></div>
         </li>
