--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -2,6 +2,7 @@
 
 {{ partial "banner.html" . }}
 <hr>
+<navi>
 <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
     <ul class="slider-container main-nav">
         <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
@@ -12,6 +13,7 @@
         </li>     
     </ul>
 </div>
+</navi>
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0"></iframe>
 <hr>
 <div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="109539" view-url="https://widget.tagembed.com/109539">  </div> <script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script></div>
