--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -10,13 +10,13 @@
     }
     ul{
         display: inline-block;
-        text-align: left;
+        text-align: center;
     }
    </style>
 </head>
     <body>
 <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
-    <ul class="slider-container main-nav">
+    <ul class="slider-container">
         <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
         <div id="slide1"></div>
         </li>
