--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -9,7 +9,7 @@
         text-align: center;
     }
     ul{
-        display: inline-block;
+        display: flex;
         text-align: center;
     }
    </style>
