--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -17,10 +17,10 @@
     <body>
 <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
     <ul class="slider-container">
-        <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
+        <li class=""><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
         <div id="slide1"></div>
         </li>
-        <li><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
+        <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
         <div id="slide2"></div>
         </li>     
     </ul>
