--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -26,6 +26,7 @@
     </ul>
 </div>
 </body>
+</html>
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0"></iframe>
 <hr>
 <div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="109539" view-url="https://widget.tagembed.com/109539">  </div> <script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script></div>
