--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -15,7 +15,8 @@
    </style>
 </head>
     <body>
-<div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
+<h2>Awassss!!!!</h2>
+       <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
     <ul class="slider-container">
         <li class=""><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
         <div id="slide1"></div>
