--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -2,20 +2,7 @@
 
 {{ partial "banner.html" . }}
 <hr>
-<html>
-<head>
-   <style>
-   	div{
-        text-align: center;
-    }
-    ul{
-        display: flex;
-        text-align: center;
-    }
-   </style>
-</head>
-    <body>
-       <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
+       <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-dark slider-nav-animation slider-nav-animation-appear slider-nav-animation-slow">
     <ul class="slider-container">
         <li class=""><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;text-align: center;align-items: center;"></li>
         <div id="slide1"></div>
@@ -25,8 +12,6 @@
         </li>     
     </ul>
 </div>
-</body>
-</html>
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="0"></iframe>
 <hr>
 <div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="109539">  </div> <script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script></div>
