--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -2,7 +2,7 @@
 
 {{ partial "banner.html" . }}
 <hr>
-       <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-dark slider-nav-page slider-nav-animation slider-nav-animation-appear slider-nav-animation-fast">
+       <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-nodelay slider-nav-dark slider-nav-page slider-nav-animation slider-nav-animation-appear slider-nav-animation-fast">
     <ul class="slider-container">
         <li class=""><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;width: auto;"></li>
         <div id="slide1"></div>
