--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -4,9 +4,9 @@
 <hr>
      <div class="swiffy-slider slider-item-nogap slider-nav-autoplay slider-nav-nodelay slider-nav-dark slider-nav-page slider-nav-animation slider-nav-animation-appear slider-nav-animation-fast">
     <ul class="slider-container">
-        <li class=""><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;margin:0 auto;text-align: center;"></li>
+        <li class=""><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto;display: flex;justify-content: center;"></li>
         <div id="slide1"></div>
-        <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto;margin:0 auto;text-align: center;"></li>
+        <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto;display: flex;justify-content: center;"></li>
         <div id="slide2"></div>     
     </ul>
 </div>
