--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer">
   <div class="container">
     <div class="row content-justify-between">
-      <div class="col-md-8 col-12 text-lg-left text-md-left">
+      <div class="col-md-8 col-12 text-lg-center text-md-center">
         <p class="copyright">
           <span>
             <script>
