--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -12,7 +12,17 @@
 </div>
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="10"></iframe>
 <hr>
-<div class="tagembed-container" style="width:100%;height:100%;overflow: auto;margin: auto;display: block;"><div class="tagembed-socialwall" data-wall-id="109539">  </div> <script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script></div>
+<div style="border: 1px solid black"; class="swiffy-slider slider-item-nogap slider-item-snapstart slider-item-show2-sm slider-item-nosnap-touch slider-nav-round slider-nav-dark slider-nav-sm slider-nav-outside slider-nav-autohide slider-nav-autoplay slider-indicators-square slider-indicators-highlight slider-nav-animation slider-nav-animation-scaleup slider-nav-animation-slow" data-slider-nav-autoplay-interval="3500">
+               <ul class="slider-container">
+        <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling.jpg" style="max-width: 100%;height: auto; margin: auto;display: block;"></li>
+         <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/beningabaditransport.com/images/wuling-price.jpg" style="max-width: 100%;height: auto; margin: auto;display: block;"></li>
+    </ul>
+    <div class="slider-indicators">
+        <button class="active"></button>
+        <button></button>
+        <button></button>
+</div>
+         </div>
 <hr>
 {{ partial "penginapan.html" . }}
 
