--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -1,14 +1,13 @@
 {{ "<!-- Footer Section Start -->" | safeHTML }}
 <footer id="footer">
-  <div class="container">
-    <div style="border: 2px solid black"; class="swiffy-slider slider-item-nogap slider-item-snapstart slider-item-show2-sm slider-item-nosnap-touch slider-nav-round slider-nav-dark slider-nav-sm slider-nav-outside slider-nav-autohide slider-nav-autoplay slider-indicators-square slider-indicators-highlight slider-nav-animation slider-nav-animation-scaleup slider-nav-animation-slow" data-slider-nav-autoplay-interval="3500">
+   <div style="border: 2px solid black"; class="swiffy-slider slider-item-nogap slider-item-snapstart slider-item-show2-sm slider-item-nosnap-touch slider-nav-round slider-nav-dark slider-nav-sm slider-nav-outside slider-nav-autohide slider-nav-autoplay slider-indicators-square slider-indicators-highlight slider-nav-animation slider-nav-animation-scaleup slider-nav-animation-slow" data-slider-nav-autoplay-interval="3500">
 <p align="center"><h3><u>Google Review Beningers</u></h3></p>
         <ul class="slider-container">
-        <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/1.jpg" style="max-width: 100%; height: 99%;"></li>
-         <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/2.jpg" style="max-width: 100%; height: 99%;"></li>
-        <li><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/3.jpg" style="max-width: 100%; height: 99%;"></li>
-         <li><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/4.jpg" style="max-width: 100%; height: 99%;"></li>
-         <li><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/5.jpg" style="max-width: 100%; height: 99%;"></li>
+        <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/1.jpg" style="max-width: 100%; height: auto;"></li>
+         <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/2.jpg" style="max-width: 100%; height: auto;"></li>
+        <li><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/3.jpg" style="max-width: 100%; height: auto;"></li>
+         <li><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/4.jpg" style="max-width: 100%; height: auto;"></li>
+         <li><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/5.jpg" style="max-width: 100%; height: auto;"></li>
     </ul>
     <div class="slider-indicators">
         <button class="active"></button>
@@ -16,6 +15,7 @@
         <button></button>
     </div>
     </div>
+  <div class="container">
     <div class="row content-justify-between">
       <div class="col-md-8 col-12 text-lg-center text-md-center">
         <p class="copyright">
