--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 {{ "<!-- Footer Section Start -->" | safeHTML }}
 <footer id="footer">
-   <div align="center" style="border: 2px solid black"; class="swiffy-slider slider-item-nogap slider-item-snapstart slider-item-show2-sm slider-item-nosnap-touch slider-nav-round slider-nav-dark slider-nav-sm slider-nav-outside slider-nav-autohide slider-nav-autoplay slider-indicators-square slider-indicators-highlight slider-nav-animation slider-nav-animation-scaleup slider-nav-animation-slow" data-slider-nav-autoplay-interval="3500">
+   <div align="center" class="swiffy-slider slider-item-nogap slider-item-snapstart slider-item-show2-sm slider-item-nosnap-touch slider-nav-round slider-nav-dark slider-nav-sm slider-nav-outside slider-nav-autohide slider-nav-autoplay slider-indicators-square slider-indicators-highlight slider-nav-animation slider-nav-animation-scaleup slider-nav-animation-slow" data-slider-nav-autoplay-interval="3500">
 <p align="center"><h3><u>Google Review Beningers</u></h3></p>
         <ul class="slider-container">
         <li class="slide-visible"><img src="https://aceapugtar.cloudimg.io/ariefbuddies.github.io/aperoweb/img/review/1.jpg" style="max-width: 420px; height: auto;"></li>
