--- a/themes/timer-hugo/layouts/partials/footer.html
+++ b/themes/timer-hugo/layouts/partials/footer.html
@@ -15,6 +15,7 @@
         <button></button>
     </div>
     </div>
+    <center><iframe width="290" height="420" src="https://ariefbuddies.github.io/reveal/" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
   <div class="container">
     <div class="row content-justify-between">
       <div class="col-md-8 col-12 text-lg-center text-md-center">
