--- a/themes/timer-hugo/layouts/index.html
+++ b/themes/timer-hugo/layouts/index.html
@@ -12,6 +12,7 @@
 </div>
 <iframe id="Frame1" title="bening" width="98%" height="500px" src="https://hackmd.io/@brafie/Syn48yRHs" frameborder="10"></iframe>
 <hr>
+<a href="https://www.blogs-collection.com/asia/" title="Asia Blogs Directory" target="_blank">Blogs Directory</a>
 {{ partial "penginapan.html" . }}
 
 {{ partial "portfolio.html" . }}
